hw1/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-hw01-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: otus-hw01-app
  template:
    metadata:
      labels:
        app: otus-hw01-app
    spec:
      containers:
        - name: otus-hw01
          image: gurok/arch_homework_1
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
