hw1/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-hw01-service
spec:
  selector:
    app: otus-hw01-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 8000
  type: NodePort
